// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./Identicon.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <span
    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
    style="width: 40px; height: 40px;"
  />
</div>
`;

exports[`./Identicon.stories DifferentAddress 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <span
    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
    style="width: 40px; height: 40px;"
  />
</div>
`;

exports[`./Identicon.stories InvalidAddress 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <span
    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
    style="width: 40px; height: 40px;"
  />
</div>
`;

exports[`./Identicon.stories LargeSize 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <span
    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
    style="width: 64px; height: 64px;"
  />
</div>
`;

exports[`./Identicon.stories SmallSize 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <span
    class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
    style="width: 24px; height: 24px;"
  />
</div>
`;
